kustomization/harbor/base/registry-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  parentRefs:
    - name: home-gateway
      namespace: default
  hostnames:
    - registry.faberge-eggs.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor
          port: 80
